# vaultmarks

./: .gitignore  Bookmark Sync Design Document.md  CLAUDE.md  LICENSE  README.md  chrome-web-store.md
.github/workflows/: extension.yml  integration.yml  server.yml
extension/: .env.production  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
extension/public/: manifest.firefox.json  manifest.json
extension/src/: config.ts  types.ts
extension/src/auth/: session.ts
extension/src/background/: index.ts
extension/src/bookmarks/: bridge.ts  echo-filter.ts
extension/src/crdt/: loro-doc.ts
extension/src/crypto/: aes.ts  kdf.ts
extension/src/popup/: index.tsx
extension/src/storage/: db.ts
extension/src/sync/: client.ts  delta-queue.ts
privacy-policy/: CNAME  index.html
server/: .env.example  Cargo.toml  railway.toml
server/migrations/: 001_init.sql  002_token_version.sql
server/src/: auth.rs  error.rs  main.rs  models.rs  rate_limit.rs
server/src/db/: queries.rs
server/src/routes/: auth.rs  events.rs  mod.rs  profiles.rs  sync.rs  ws.rs
tests/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/fixtures/: index.ts
tests/helpers/: bookmarks.ts  browser.ts  popup.ts
tests/specs/: auth.spec.ts  cross-browser.spec.ts  firefox.spec.ts  import-conflict.spec.ts  onboarding-backup.spec.ts  profiles.spec.ts  sync.spec.ts
